[gd_scene load_steps=2 format=3 uid="uid://6n72bxp7jbov"]

[ext_resource type="Script" uid="uid://t36fnswoykhp" path="res://Scenes/TurnBased/TurnBasedContainer.gd" id="1_5qbkx"]

[node name="TurnBasedContainer" type="Node2D" groups=["turnBased"]]
script = ExtResource("1_5qbkx")
metadata/_edit_group_ = true

[node name="StateTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="EntityTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="StateTimer" to="." method="onStateTimer_timeout"]
[connection signal="timeout" from="EntityTimer" to="." method="onEntityTimer_timeout"]
